--- a/notebooks/analysis.ipynb
+++ b/notebooks/analysis.ipynb
@@ -1335,7 +1335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "id": "6b609585",
    "metadata": {},
    "outputs": [
@@ -1456,7 +1456,7 @@
     "USING (title, platform)\n",
     "LIMIT 10;\n",
     "\"\"\"\n",
-    "result = %sql $query\n",
+    "result = %sql $query # IPython magic to run SQL query (VS Code shows red but it works)\n",
     "df = result.DataFrame()\n",
     "df.head()"
    ]
