--- a/notebooks/analysis.ipynb
+++ b/notebooks/analysis.ipynb
@@ -1335,7 +1335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "id": "6b609585",
    "metadata": {},
    "outputs": [
@@ -1456,7 +1456,8 @@
     "USING (title, platform)\n",
     "LIMIT 10;\n",
     "\"\"\"\n",
-    "result = %sql $query # IPython magic to run SQL query (VS Code shows red but it works)\n",
+    "# IPython magic to run SQL query (VS Code shows red but it works)\n",
+    "result = %sql $query\n",
     "df = result.DataFrame()\n",
     "df.head()"
    ]
@@ -1683,9 +1684,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "video-game-trends-sql venv",
    "language": "python",
-   "name": "python3"
+   "name": ".venv"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1697,7 +1698,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
